# tttranslate

./: Cargo.toml  LICENSE  README.md
iso2dirname/: Cargo.toml
iso2dirname/src/: main.rs
json2lua/: Cargo.toml  deny.toml
json2lua/src/: lua.pest
lua2json/: lang.lua  ordered.lua
src/: lua.pest  main.rs
