[package]
name = "json2lua"
version = "0.1.0"
authors = ["Henk van der Laan <opensource@henkvdlaan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pest = "2.1"
pest_derive = "2.1"
serde = { version = "1.0", features = ["derive"] }
